--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="bb">
     <div class="container">
       <div class="row">
         <div class="col-4">
@@ -83,7 +83,9 @@
           <h1 class="heading-hero-homepage">Automated global payroll and compliance for remote teams</h1>
           <p class="subheading-hero-homepage night40">Panther puts global payroll, benefits, taxes, and local compliance
             on auto-pilot, without you having to set up a subsidiary.</p>
-          <button class="button">Book a demo </button>
+          <div class="book">
+            <a class="button" href="#">Book a demo</a>
+          </div>
           <p class="trusted">Trusted by</p>
           <img class="img-left-logo" src="./assets/image/trusted-1.png" alt="">
           <img class="img-left-logo" src="./assets/image/trusted-2.png" alt="">
@@ -183,9 +185,205 @@
         </div>
       </div>
     </div>
+    <div class="container section3-three">
+
+      <div class="row asd">
+        <div class="col-6 sec">
+          <h2 class="heading-eyebrow">HIRE ANYONE IN THE WORLD</h2>
+          <h2 class="heading-small">Turnkey employment in over 160 countries.</h2>
+          <p class="paragraph-feature">Don't waste years setting up foreign subsidiaries, and save millions in the
+            process. We have our own, so you can start working with your teammates, right away.</p>
+          <a href="#">Explore global employment -> </a>
+        </div>
+        <div class="col-6">
+          <img class="sec3-img" src=".//assets/image/section-3-right-img.png" alt="">
+        </div>
+      </div>
+    </div>
   </section>
 
+  <section class="section4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="heading-copy">It’s global hiring,br simplified.</h2>
+        </div>
+        <div class="row">
+          <div class="col-4 text6">
+            <h3 class="heading-xs white">Onboard teammates in minutes.</h3>
+            <div class="p-div">
+              <p class="paragraph night40">No unnecessary questions or steps in the way. Your teammates can onboard in
+                just a few clicks.</p>
+            </div>
+          </div>
+          <div class="col-4 text6">
+            <h3 class="heading-xs white">Onboard teammates in minutes.</h3>
+            <div class="p-div">
+              <p class="paragraph night40">No unnecessary questions or steps in the way. Your teammates can onboard in
+                just a few clicks.</p>
+            </div>
+          </div>
+          <div class="col-4 text6">
+            <h3 class="heading-xs white">Onboard teammates in minutes.</h3>
+            <div class="p-div">
+              <p class="paragraph night40">No unnecessary questions or steps in the way. Your teammates can onboard in
+                just a few clicks.</p>
+            </div>
+          </div>
+          <div class="col-4 text6">
+            <h3 class="heading-xs white">Onboard teammates in minutes.</h3>
+            <div class="p-div">
+              <p class="paragraph night40">No unnecessary questions or steps in the way. Your teammates can onboard in
+                just a few clicks.</p>
+            </div>
+          </div>
+          <div class="col-4 text6">
+            <h3 class="heading-xs white">Onboard teammates in minutes.</h3>
+            <div class="p-div">
+              <p class="paragraph night40">No unnecessary questions or steps in the way. Your teammates can onboard in
+                just a few clicks.</p>
+            </div>
+          </div>
+          <div class="col-4 text6">
+            <h3 class="heading-xs white">Onboard teammates in minutes.</h3>
+            <div class="p-div">
+              <p class="paragraph night40">No unnecessary questions or steps in the way. Your teammates can onboard in
+                just a few clicks.</p>
+            </div>
+          </div>
 
+
+        </div>
+      </div>
+      <div class="book">
+        <a class="button" href="#">Book a demo</a>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="section-build">
+    <div class="row">
+      <div class="col-12">
+        <h2 class="heading centered">Build the global team of your dreams. Let us do the heavy-lifting.</h2>
+      </div>
+    </div>
+    <div class="book">
+      <a class="button" href="#">Book a demo</a>
+    </div>
+  </section>
+  <section class="section-latest">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="start">
+            <h2>Latest from our blog</h2>
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-4 sec1">
+          <div class="img"><img src="./assets/image/section-latest-1.png" alt="">
+            <p class="img1-text">Remote work & Culture</p>
+          </div>
+          <h2 class="title-blog homepage1">Biggest challenges in HR today and how to sustain engagement</h2>
+          <p class="paragraph-excerpt homepage">HR should influence a company's key policies and decisions. Here are
+            some of the biggest challenges in HR, from our friends at Onsite.fun</p>
+          <div class="text-block-3">August 23, 2021</div>
+        </div>
+
+        <div class="col-4 sec1">
+          <div class="img"><img src="./assets/image/section-latest-2.png" alt="">
+            <p class="img1-text">Remote work & Culture</p>
+          </div>
+          <h2 class="title-blog homepage1">Biggest challenges in HR today and how to sustain engagement</h2>
+          <p class="paragraph-excerpt homepage">HR should influence a company's key policies and decisions. Here are
+            some of the biggest challenges in HR, from our friends at Onsite.fun</p>
+          <div class="text-block-3">August 23, 2021</div>
+        </div>
+
+        <div class="col-4 sec1">
+          <div class="img"><img src="./assets/image/section-latest-3.png" alt="">
+            <p class="img1-text">Remote work & Culture</p>
+          </div>
+          <h2 class="title-blog homepage1">Biggest challenges in HR today and how to sustain engagement</h2>
+          <p class="paragraph-excerpt homepage">HR should influence a company's key policies and decisions. Here are
+            some of the biggest challenges in HR, from our friends at Onsite.fun</p>
+          <div class="text-block-3">August 23, 2021</div>
+        </div>
+      </div>
+      <div class="book">
+        <a class="button" href="#">Read more</a>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-md-2 col-lg-3 col-xl-3">
+
+          <div class="sekil-add">
+
+          </div>
+        </div> -->
+        <div class="col-md-2 col-lg-3 col-xl-3">
+          <h2>COMPANY</h2>
+          <ul>
+            <li><a href=""> About Us</a></li>
+            <li><a href=""> Contact Us</a></li>
+            <li><a href=""> Press</a></li>
+            <li><a href=""> Careers</a></li>
+            <li><a href=""> Help Center</a></li>
+            <li><a href=""> Webinars</a></li>
+            <li><a href=""> Our Manifesto</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 col-lg-3 col-xl-3">
+          <h2>WORK WITH PANTHER</h2>
+          <ul>
+            <li><a href=""> About Us</a></li>
+          </ul>
+          <h2 class="resource">RESOURCES</h2>
+          <ul>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#">Release Notes</a></li>
+            <li><a href="#">How to ger a remote job</a></li>
+            <li><a href="#">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 col-lg-3 col-xl-3">
+          <h2 class="legal">LEGAL<h2>
+              <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Terms of Use</a></li>
+
+              </ul>
+        </div>
+        <div class="col-md-2 col-lg-3 col-xl-3 right-side">
+          <h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
+          <p>Get the latest tips, news and resources on global employment and remote working.</p>
+          <form action="">
+            <input class="asdb" type="text" id="name" placeholder="Name">
+            <input class="asdb" type="email" id="email" placeholder="Email address">
+            <input class="end-input" type="submit" value="Submit">
+          </form>
+        </div>
+
+        <div class="col-md-12 col-lg-12 ">
+          <div class="paragra night text">Copyright © 2021 Panther Inc. All rights
+            reserved.</div>
+          <div class="icon-footer">
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-linkedin"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
