--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <title>Stream-it main page</title>
+  <title>Panther</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
 
 
 
-                <div style="display: inline-block;" class="buttons">
+                <div class="buttons">
                   <a class="  sign-in" id="sign" href="#"> Log in</a>
                   <a class="book-demo" href="#"> Book a demo</a>
                 </div>
