--- a/country.html
+++ b/country.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://templates.iqonic.design/streamit/frontend/html/images/favicon.ico" />
     <link rel="stylesheet" href="./assets/flickity/flickity.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>Country</title>
 </head>
 
 <body>
@@ -295,9 +295,89 @@
                 <div class="col-xl-12">
                 </div>
             </div> -->
-</div>
-</section>
+        </div>
+    </section>
+    <section class="buildg">
+        <div class="buildgd">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6">
+                        <h2 class="heading small">Build the global team you always wanted.</h2>
+
+                        <p class="text-watch">Watch our 60-second video</p>
+                        <i class=" bi bi-play-circle-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="four-card">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-3">
+                        <!-- <i class="bi bi-archive icon1"></i> -->
+                        <img loading="lazy"
+                            src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60114e90f71627ee43d3df46_icon-employment.svg"
+                            alt="" class="icon-module">
+                        <h3 class="subheading-module">Global employment</h3>
+                        <div class="paragraph-module">Hire compliantly in over 160 countries</div>
+                        <a href="/global-employment" class="link-module w-inline-block w-clearfix">
+                            <div class="arrowtext">
+                                <p>Learn more</p>
+                                <img src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60113063a8400f5630842b52_arrow-right-royal60.svg"
+                                    loading="lazy" alt="" class="link-arrow">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xl-3">
+                        <!-- <i class="bi bi-archive icon1"></i> -->
+                        <img loading="lazy"
+                            src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60114e90f71627ee43d3df46_icon-employment.svg"
+                            alt="" class="icon-module">
+                        <h3 class="subheading-module">Global employment</h3>
+                        <div class="paragraph-module">Hire compliantly in over 160 countries</div>
+                        <a href="/global-employment" class="link-module w-inline-block w-clearfix">
+                            <div class="arrowtext">
+                                <p>Learn more</p>
+                                <img src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60113063a8400f5630842b52_arrow-right-royal60.svg"
+                                    loading="lazy" alt="" class="link-arrow">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xl-3">
+                        <!-- <i class="bi bi-archive icon1"></i> -->
+                        <img loading="lazy"
+                            src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60114e90f71627ee43d3df46_icon-employment.svg"
+                            alt="" class="icon-module">
+                        <h3 class="subheading-module">Global employment</h3>
+                        <div class="paragraph-module">Hire compliantly in over 160 countries</div>
+                        <a href="/global-employment" class="link-module w-inline-block w-clearfix">
+                            <div class="arrowtext">
+                                <p>Learn more</p>
+                                <img src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60113063a8400f5630842b52_arrow-right-royal60.svg"
+                                    loading="lazy" alt="" class="link-arrow">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xl-3">
+                        <!-- <i class="bi bi-archive icon1"></i> -->
+                        <img loading="lazy"
+                            src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60114e90f71627ee43d3df46_icon-employment.svg"
+                            alt="" class="icon-module">
+                        <h3 class="subheading-module">Global employment</h3>
+                        <div class="paragraph-module">Hire compliantly in over 160 countries</div>
+                        <a href="/global-employment" class="link-module w-inline-block w-clearfix">
+                            <div class="arrowtext">
+                                <p>Learn more</p>
+                                <img src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60113063a8400f5630842b52_arrow-right-royal60.svg"
+                                    loading="lazy" alt="" class="link-arrow">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
-</html> -->
+</html>
