--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="./assets/flickity/flickity.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> -->
+  <link rel="stylesheet" href="./assets/css/style.css" />
+
   <title>Panther</title>
 </head>
 
 <body>
-  <nav class="bb">
+  <!-- <nav class="bb">
     <div class="container">
       <div class="row">
         <div class="col-4">
@@ -74,8 +75,83 @@
         </div>
       </div>
     </div>
+  </nav> -->
+  <nav>
+    <div class="nav">
+      <div class="container">
+        <div class="row sd">
+          <div class="col-lg-2 col-md-3 col-6 left_side">
+            <div class="img_logo">
+              <img src="./assets/image/index.logo.svg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-10 col-md-12 col-12 right_side">
+            <div class="links">
+              <ul>
+                <li class="sub_menu h_w1"> <a href="#">How it works <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                      height="16" fill="currentColor" class="bi bi-chevron-down ox" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg></a>
+                  <!-- <div class="dropdwn h_w">
+                    <ul>
+                      <li><a class="a-hover" href="">Global Payroll</a></li>
+                      <li><a class="a-hover" href="">Contractors</a></li>
+                      <li><a class="a-hover" href="">Benefits</a></li>
+                      <li><a class="a-hover" href="">Global Employment</a></li>
+                    </ul>
+                  </div> -->
+                </li>
+                <li><a href="#">Why Panther</a>
+                </li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Countries</a></li>
+                <li class="sub_menu"><a href="#">Resources <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                      height="16" fill="currentColor" class="bi bi-chevron-down ox" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg></a>
+                  <!-- <ul>
+                    <p><b>Partners</b></p>
+                    <li><a class="a-hover" href="">All partner Programs</a></li>
+                    <li><a class="a-hover" href="">All partner Programs</a></li>
+                    <li><a class="a-hover" href="">All partner Programs</a></li>
+                    <p><b>Being remote</b></p>
+                    <li><a class="a-hover" href="">All partner Programs</a></li>
+                    <li><a class="a-hover" href="">All partner Programs</a></li>
+                    <li><a class="a-hover" href="">All partner Programs</a></li>
+                    <a class="a-hover" href=""><b>Blog</b></a><br>
+                    <a class="a-hover" href=""> <b>Community</b></a><br>
+                    <a class="a-hover" href=""><b>Case Studies</b></a><br>
+                    <a class="a-hover" href=""> <b>Help Center</b></a><br>
+
+                  </ul> -->
+                </li>
+                <div class="buttons_nav">
+                  <a class=" log_in_nav" id="sign" href="#"> Log in</a>
+                  <a class="book-demo_nav" href="#"> Book a demo</a>
+                </div>
+              </ul>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="burger_svg">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-list svg_br"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </nav>
-  <header>
+
+
+
+
+  <!-- <header>
     <img class="back-img" src="./assets/image/back.png" alt="">
     <div class="container section-1">
       <div class="row">
@@ -106,10 +182,10 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
 
 
-  <section class="section-2 not-with-panther">
+  <!-- <section class="section-2 not-with-panther">
     <div class="container">
       <div class="row">
         <div class="col-4">
@@ -138,8 +214,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="section-three-global">
+  </section> -->
+  <!-- <section class="section-three-global">
     <div class="container section3-three">
 
       <div class="row asd">
@@ -200,9 +276,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <section class="section4">
+  <!-- <section class="section4">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -260,9 +336,9 @@
       </div>
     </div>
 
-  </section>
+  </section> -->
 
-  <section class="section-build">
+  <!-- <section class="section-build">
     <div class="row">
       <div class="col-12">
         <h2 class="heading centered">Build the global team of your dreams. Let us do the heavy-lifting.</h2>
@@ -271,8 +347,8 @@
     <div class="book">
       <a class="button" href="#">Book a demo</a>
     </div>
-  </section>
-  <section class="section-latest">
+  </section> -->
+  <!-- <section class="section-latest">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -317,16 +393,16 @@
         <a class="button" href="#">Read more</a>
       </div>
     </div>
-  </section>
-  <footer>
+  </section> -->
+  <!-- <footer>
     <div class="container">
       <div class="row">
-        <!-- <div class="col-md-2 col-lg-3 col-xl-3">
+        <div class="col-md-2 col-lg-3 col-xl-3">
 
           <div class="sekil-add">
 
           </div>
-        </div> -->
+        </div> 
         <div class="col-md-2 col-lg-3 col-xl-3">
           <h2>COMPANY</h2>
           <ul>
@@ -383,8 +459,10 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
+  <script src="./assets/js/main.js">
 
+  </script>
 </body>
 
 </html>
