--- a/index.html
+++ b/index.html
@@ -87,45 +87,52 @@
           </div>
           <div class="col-lg-10 col-md-12 col-12 right_side">
             <div class="links">
-              <ul>
-                <li class="sub_menu h_w1"> <a href="#">How it works <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                      height="16" fill="currentColor" class="bi bi-chevron-down ox" viewBox="0 0 16 16">
+              <ul class="links_ul">
+                <li data-sub="how" class="sub_menu h_w1 links_ul_li">
+                  <a href="#">How it works
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-chevron-down ox" viewBox="0 0 16 16">
                       <path fill-rule="evenodd"
                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                     </svg></a>
-                  <!-- <div class="dropdwn h_w">
-                    <ul>
-                      <li><a class="a-hover" href="">Global Payroll</a></li>
-                      <li><a class="a-hover" href="">Contractors</a></li>
-                      <li><a class="a-hover" href="">Benefits</a></li>
-                      <li><a class="a-hover" href="">Global Employment</a></li>
+                  <div id="how" class="dropdwn12 h_w123  ">
+                    <ul class="hw_ul">
+                      <li class="hw_ul_li"><a class="a-hover" href="">Global Employment</a></li>
+                      <li class="hw_ul_li"><a class="a-hover" href="">Global Payroll</a></li>
+                      <li class="hw_ul_li"><a class="a-hover" href="">Contractors</a></li>
+                      <li class="hw_ul_li"><a class="a-hover" href="">Benefits</a></li>
                     </ul>
-                  </div> -->
+                  </div>
                 </li>
-                <li><a href="#">Why Panther</a>
+                <li><a class="sub_men3 links_ul_li" href="#">Why Panther</a>
                 </li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Countries</a></li>
-                <li class="sub_menu"><a href="#">Resources <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                      height="16" fill="currentColor" class="bi bi-chevron-down ox" viewBox="0 0 16 16">
+                <li><a class="sub_men3 links_ul_li" href="#">Pricing</a></li>
+                <li><a class="sub_men3 links_ul_li" href="#">Countries</a></li>
+                <li data-sub="resc" class="sub_menu links_ul_li resc"><a href="#">Resources <svg
+                      xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-chevron-down ox" viewBox="0 0 16 16">
                       <path fill-rule="evenodd"
                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                     </svg></a>
-                  <!-- <ul>
-                    <p><b>Partners</b></p>
-                    <li><a class="a-hover" href="">All partner Programs</a></li>
-                    <li><a class="a-hover" href="">All partner Programs</a></li>
-                    <li><a class="a-hover" href="">All partner Programs</a></li>
-                    <p><b>Being remote</b></p>
-                    <li><a class="a-hover" href="">All partner Programs</a></li>
-                    <li><a class="a-hover" href="">All partner Programs</a></li>
-                    <li><a class="a-hover" href="">All partner Programs</a></li>
-                    <a class="a-hover" href=""><b>Blog</b></a><br>
-                    <a class="a-hover" href=""> <b>Community</b></a><br>
-                    <a class="a-hover" href=""><b>Case Studies</b></a><br>
-                    <a class="a-hover" href=""> <b>Help Center</b></a><br>
+                  <div id="resc" class="dropdwn12 resource">
+                    <ul class="res_ul ">
 
-                  </ul> -->
+                      <p class="p_resc" class=""><b>Partners</b></p>
+                      <li class="res_ul_li"><a class="a-hover" href="">All partner Programs</a></li>
+                      <li class="res_ul_li"><a class="a-hover" href="">Panther for Startups</a></li>
+                      <li class="res_ul_li"><a class="a-hover" href="">Rreferral Panther</a></li>
+                      <p class="p_resc"><b>Being remote</b></p>
+                      <li class="res_ul_li"><a class="a-hover" href="">Careers</a></li>
+                      <li class="res_ul_li"><a class="a-hover" href="">How to get a remote job</a></li>
+                      <li class="res_ul_li"><a class="a-hover" href="">Remote Hiring & Inclusive Capitalis</a></li>
+                      <a class="a-hover" href=""><b>Blog</b></a><br>
+                      <a class="a-hover" href=""> <b>Community</b></a><br>
+                      <a class="a-hover" href=""><b>Case Studies</b></a><br>
+                      <a class="a-hover" href=""> <b>Help Center</b></a><br>
+
+                    </ul>
+                  </div>
+
                 </li>
                 <div class="buttons_nav">
                   <a class=" log_in_nav" id="sign" href="#"> Log in</a>
