--- a/index.html
+++ b/index.html
@@ -154,6 +154,39 @@
       </div>
     </div>
   </nav>
+  <header>
+    <!-- <img class="back-img" src="./assets/image/back.png" alt=""> -->
+    <div class="container section-1_hea">
+      <div class="row row_hea">
+        <div class="col-xl-6 left_side_hea">
+          <h1 class="heading-hero-homepage_hea">Automated global payroll and compliance for remote teams</h1>
+          <p class="subheading-hero-homepage night40_hea">Panther puts global payroll, benefits, taxes, and local
+            compliance
+            on auto-pilot, without you having to set up a subsidiary.</p>
+          <div class="book_hea">
+            <a class="button_hea" href="#">Book a demo</a>
+          </div>
+          <p class="trusted">Trusted by</p>
+          <img class="img-left-logo_hea" src="./assets/image/trusted-1.png" alt="">
+          <img class="img-left-logo_hea" src="./assets/image/trusted-2.png" alt="">
+          <img class="img-left-logo_hea" src="./assets/image/trusted-3.png" alt="">
+          <img class="img-left-logo_hea" src="./assets/image/trusted-4.png" alt="">
+          <img class="img-left-logo_hea" src="./assets/image/trusted-5.png" alt="">
+          <img class="img-left-logo_hea" src="./assets/image/trusted-6.png" alt="">
+
+          <img class="img-left-logo_hea" src="./assets/image/trusted-7.png" alt="">
+
+        </div>
+        <div class="col-xl-6 right_side_hea">
+          <div class="video_image_hea">
+            <img class="img_right_hea" src="./assets/image/video-image.png" alt="">
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </header>
 
 
 
