index__2_SEC_responsive

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       <p class="p_resc" class=""><b>Partners</b></p>
                       <li class="res_ul_li"><a class="a-hover" href="">All partner Programs</a></li>
                       <li class="res_ul_li"><a class="a-hover" href="">Panther for Startups</a></li>
-                      <li class="res_ul_li"><a class="a-hover" href="">Rreferral Panther</a></li>
+                      <li class="res_ul_li"><a class="a-hover" href="">Referral Panther</a></li>
                       <p class="p_resc"><b>Being remote</b></p>
                       <li class="res_ul_li"><a class="a-hover" href="">Careers</a></li>
                       <li class="res_ul_li"><a class="a-hover" href="">How to get a remote job</a></li>
@@ -134,10 +134,10 @@
                   </div>
 
                 </li>
-                <div class="buttons_nav">
+                <!-- <div class="buttons_nav">
                   <a class=" log_in_nav" id="sign" href="#"> Log in</a>
                   <a class="book-demo_nav" href="#"> Book a demo</a>
-                </div>
+                </div> -->
               </ul>
             </div>
           </div>
@@ -158,7 +158,7 @@
     <!-- <img class="back-img" src="./assets/image/back.png" alt=""> -->
     <div class="container section-1_hea">
       <div class="row row_hea">
-        <div class="col-xl-6 left_side_hea">
+        <div class="col-xl-6 col-lg-6 col-md-12 left_side_hea">
           <h1 class="heading-hero-homepage_hea">Automated global payroll and compliance for remote teams</h1>
           <p class="subheading-hero-homepage night40_hea">Panther puts global payroll, benefits, taxes, and local
             compliance
@@ -177,7 +177,7 @@
           <img class="img-left-logo_hea" src="./assets/image/trusted-7.png" alt="">
 
         </div>
-        <div class="col-xl-6 right_side_hea">
+        <div class="col-xl-6 col-lg-6 col-md-12 right_side_hea">
           <div class="video_image_hea">
             <img class="img_right_hea" src="./assets/image/video-image.png" alt="">
 
