--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <ul class="links_ul">
                     <li data-sub="how" class="sub_menu h_w1 links_ul_li">
                       <a href="#">How it works
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        <svg xmlns="http://www.w3.org/2000/svg" id="ho" width="16" height="16" fill="currentColor"
                           class="bi bi-chevron-down ox" viewBox="0 0 16 16">
                           <path fill-rule="evenodd"
                             d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
@@ -65,12 +65,12 @@
                         </ul>
                       </div>
                     </li>
-                    <li><a class="sub_men3 links_ul_li" href="#">Why Panther</a>
+                    <li><a class="sub_men3 links_ul_li asd" href="#">Why Panther</a>
                     </li>
-                    <li><a class="sub_men3 links_ul_li" href="#">Pricing</a></li>
-                    <li><a class="sub_men3 links_ul_li" href="#">Countries</a></li>
+                    <li><a class="sub_men3 links_ul_li asd" href="#">Pricing</a></li>
+                    <li><a class="sub_men3 links_ul_li asd" href="#">Countries</a></li>
                     <li data-sub="resc" class="sub_menu links_ul_li resc"><a href="#">Resources <svg
-                          xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                          xmlns="http://www.w3.org/2000/svg" id="res" width="16" height="16" fill="currentColor"
                           class="bi bi-chevron-down ox" viewBox="0 0 16 16">
                           <path fill-rule="evenodd"
                             d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
@@ -95,14 +95,14 @@
                       </div>
     
                     </li>
-                    <!-- <div class="buttons_nav">
+                    <div class="buttons_nav">
                       <a class=" log_in_nav" id="sign" href="#"> Log in</a>
                       <a class="book-demo_nav" href="#"> Book a demo</a>
-                    </div> -->
+                    </div>
                   </ul>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-6 svg_col">
                 <div class="burger_svg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-list svg_br"
                     viewBox="0 0 16 16">
@@ -413,7 +413,7 @@
           </div>
           <div class="col-12">
           <div class="book">
-            <a class="button" href="#">Book a demo</a>
+            <a class="button" href="#">Read more</a>
           </div>
       </section> 
 
@@ -426,7 +426,7 @@
             <div class="col-xl-1 ft_col ">
     
               <div class="logo-ft">
-                <!-- <img src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/5ff4950dc7ae57be0fc34081_logomark-white.svg" alt="" class="footer-image"> -->
+                <img src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/5ff4950dc7ae57be0fc34081_logomark-white.svg" alt="" class="footer-image">
               </div>
             </div> 
             <div class="col-xl-3 col-md-6 fr_col2 s1">
