--- a/country.html
+++ b/country.html
@@ -524,6 +524,9 @@
           </div>
         </div>
       </footer>
+      <script src="./assets/js/main.js">
+    
+      </script>
 </body>
 
 </html>
