--- a/login.html
+++ b/login.html
@@ -8,14 +8,16 @@
     <link rel="shortcut icon" href="https://templates.iqonic.design/streamit/frontend/html/images/favicon.ico" />
     <link rel="stylesheet" href="./assets/flickity/flickity.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/fonts.css">
+
     <title>LogIn</title>
 </head>
 
 <body>
     <div class="login_start">
         <div class="container_fluid">
-            <div class="row">
-                <div class="col-xl-5 left_side_login">
+            <div class="row login_row">
+                <div class="col-lg-5 col-md-12  left_side_login">
                     <div class="login_logo"><svg width="40" height="40" viewBox="0 0 40 40" fill="none"
                             xmlns="http://www.w3.org/2000/svg" class="sc-hGPAah CoLgZ">
                             <path
@@ -168,7 +170,7 @@
 
 
                 </div>
-                <div class="col-xl-7">
+                <div class="col-lg-7 col-md-12  right_side_col">
                     <div class="right_side">
                         <div class="text_top"></div>
                         <h1 class="sc-eCImvq bqPRPL">Welcome back!</h1>
@@ -193,7 +195,9 @@
             </div>
         </div>
     </div>
+  
 
+    </script>
 </body>
 
 </html>
