--- a/blog_employee.html
+++ b/blog_employee.html
@@ -205,7 +205,9 @@
             </div>
         </div>
     </div>
-
+    <script src="./assets/js/main.js">
+    
+    </script>
 </body>
 
 </html>
