--- a/country.html
+++ b/country.html
@@ -429,7 +429,9 @@
                     </div>
                     <div class="col-xl-3 col-md-6 fc_col">
                         <!-- <i class="bi bi-archive icon1"></i> -->
-                        <img loading="lazy" width="48" height="48" src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60114e54e94ff15e66df4891_icon-benefits.svg" alt="" class="icon-module">
+                        <img loading="lazy"
+                        src="https://assets-global.website-files.com/5fe9c5e22d0827321f923fc1/60114e90f71627ee43d3df46_icon-employment.svg"
+                        alt="" class="icon-module">
                         <h3 class="subheading-modulect h3_3">Benefits</h3>
                         <div class="paragraph-module ct_div_3">Keep your team healthy and productive</div>
                         <a href="/global-employment" class="link-module w-inline-block w-clearfix">
