--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         </svg></a>
                       <div id="how" class="dropdwn12 h_w123  ">
                         <ul class="hw_ul">
-                          <li class="hw_ul_li"><a class="a-hover" href="">Global Employment</a></li>
-                          <li class="hw_ul_li"><a class="a-hover" href="">Global Payroll</a></li>
-                          <li class="hw_ul_li"><a class="a-hover" href="">Contractors</a></li>
+                          <li class="hw_ul_li"><a class="a-hover" href="./global_payroll.html">Global Employment</a></li>
+                          <li class="hw_ul_li"><a class="a-hover" href="./global_payroll.html">Global Payroll</a></li>
+                          <li class="hw_ul_li"><a class="a-hover" href=".//login.html">Contractors</a></li>
                           <li class="hw_ul_li"><a class="a-hover" href="">Benefits</a></li>
                         </ul>
                       </div>
